# trading-bot-polymarket

./: README.md
public/: index.css
v2_rust/: .env  .env.example  Cargo.toml  README.md
v2_rust/db/: markets.json
v2_rust/src/: allowance.rs  btc_slug.rs  clob_client.rs  config.rs  db.rs  detector.rs  gamma_api.rs  main.rs  pair_orders.rs  portfolio_state.rs  wss_listener.rs
v2_typescript/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
v2_typescript/db/: markets.json
v2_typescript/src/: allowance.ts  btc_slug.ts  clob_client.ts  config.ts  db.ts  detector.ts  gamma_api.ts  main.ts  pair_orders.ts  portfolio_state.ts  wss_listener.ts
